--- a/front-end/src/app.css
+++ b/front-end/src/app.css
@@ -2,4 +2,5 @@ body, html {
     margin: 0;
     padding: 0;
     overflow-x: hidden; /* This will prevent horizontal scroll if any */
+    font-family: 'arial', sans-serif;
 }
