--- a/svelte-kit/static/global.css
+++ b/svelte-kit/static/global.css
@@ -3,4 +3,6 @@ body, html {
     padding: 0;
     overflow-x: hidden; /* This will prevent horizontal scroll if any */
     font-family: 'arial', sans-serif;
+    background-color: #2f2f2f;
+    height: 100vh;
 }
